Prevent horizontal scroll

--- a/template.css
+++ b/template.css
@@ -2,6 +2,7 @@
 body,html {
   height: 100%;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 /* hidden spacer before sections for proper offset */
